Set a more contextualized job name for matrixed jobs

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,9 +7,9 @@ on:
 
 
 # TODO(lijok): cache dependencies
-# TODO(lijok): can we overwrite job names?
 jobs:
   test:
+    name: test ${{ matrix.os }} python${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
 
     strategy:
