--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,3 +80,6 @@ lexicographical = true
 [[tool.mypy.overrides]]
 module = "tests.*"
 ignore_errors = true
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
