Set -ra --durations 10 --new-first flags for all pytest runs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,4 +82,8 @@ module = "tests.*"
 ignore_errors = true
 
 [tool.pytest.ini_options]
+# -ra adds a short summary of all test outcomes aside from passed
+# --durations 10 adds a short summary of slowest 10 tests
+# --new-first runs tests on new files first
+addopts = "-ra --durations 10 --new-first"
 asyncio_mode = "auto"
