--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,7 +18,7 @@ jobs:
         os:
           - ubuntu-latest
           - macos-latest
-          - windows-latest
+#          - windows-latest
         python-version:
           - "3.8"
           - "3.9"
