--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = [
-    "setuptools>=63.0.0b1",  # https://discuss.python.org/t/help-testing-pep-660-support-in-setuptools/16904
+    "setuptools==63.0.0b1",  # https://discuss.python.org/t/help-testing-pep-660-support-in-setuptools/16904
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
