--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,5 +96,5 @@ ignore_errors = true
 # --durations 10 adds a short summary of slowest 10 tests
 # --new-first runs tests on new files first
 # --basetemp .test_artifacts sets the path that the tmp_path fixture will store files in
-addopts = "-ra --durations 10 --new-first --basetemp .test_artifacts"
+addopts = "-vv -ra --durations 10 --new-first --basetemp .test_artifacts"
 asyncio_mode = "auto"
