Use matrix to parallelize tests in ci

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,6 +23,13 @@ jobs:
           - "3.8"
           - "3.9"
           - "3.10"
+        test-type:
+          - "acceptance-test"
+          - "integration-test"
+          - "performance-test"
+          - "property-test"
+          - "system-test"
+          - "unit-test"
 
     steps:
       - name: checkout repo
@@ -40,6 +47,6 @@ jobs:
           key: python-${{ matrix.python-version }}-${{ matrix.os }}-${{ hashFiles('pyproject.toml') }}
 
       - name: run tests
-        run: make test-all
+        run: make ${{ matrix.test-type }}
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
