--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    name: test ${{ matrix.os }} python${{ matrix.python-version }}
+    name: ${{ matrix.test-type }} ${{ matrix.os }} python${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
 
     strategy:
