--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,13 +24,14 @@ jobs:
           - "3.9"
           - "3.10"
         test-type:
-          - "lint"
-          - "acceptance-test"
-          - "integration-test"
-          - "performance-test"
-          - "property-test"
-          - "system-test"
           - "unit-test"
+          - "integration-test"
+          - "property-test"
+          - "functional-test"
+          - "security-test"
+          - "system-test"
+          - "acceptance-test"
+          - "performance-test"
 
     steps:
       - name: checkout repo
