Rename system tests to smoke tests to comply with latest DRs

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,7 +29,7 @@ jobs:
           - "property-test"
           - "functional-test"
           - "security-test"
-          - "system-test"
+          - "smoke-test"
           - "acceptance-test"
           - "performance-test"
 
