--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,9 +16,9 @@ jobs:
 
       matrix:
         os:
-          - ubuntu-latest
-#          - macos-latest
-#          - windows-latest
+          - "ubuntu-22.04"
+#          - "macos-12"
+#          - "windows-2022"
         python-version:
           - "3.8"
           - "3.9"
