--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,13 +49,11 @@ classifiers = [
 
 [project.optional-dependencies]
 dev = [
-    "black",
-    "isort",
-    "black",
-    "isort",
-    "hypothesis",
-    "pytest",
-    "pytest-asyncio",
+    "black>=22.10.0",
+    "isort>=5.10.1",
+    "hypothesis>=6.54.0",
+    "pytest>=7.1.3",
+    "pytest-asyncio>=0.19.0",
 ]
 
 hashing = [
