--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dev = [
     "black>=22.10.0",
     "isort>=5.10.1",
     "hypothesis>=6.54.0",
+    "mypy>=0.982",
     "pytest>=7.1.3",
     "pytest-asyncio>=0.19.0",
 ]
