--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,16 +50,19 @@ classifiers = [
 dev = [
     "build>=0.8.0",
     "twine>=4.0.1",
-    "black>=22.10.0",
-    "isort>=5.10.1",
     "hypothesis>=6.54.0",
-    "mypy>=0.982",
     "pytest>=7.1.3",
     "pytest-asyncio>=0.19.0",
 ]
 
 aws = [
     "boto3>=1.24"
+]
+
+testing = [
+    "black>=22.10.0",
+    "isort>=5.10.1",
+    "mypy>=0.982",
 ]
 
 [tool.setuptools]
@@ -73,14 +76,6 @@ python_sdk = ["py.typed", "version"]
 
 [tool.setuptools.dynamic]
 version = {file = "version"}
-
-[tool.mypy]
-strict = true
-warn_unreachable = true
-
-[[tool.mypy.overrides]]
-module = "tests.*"
-ignore_errors = true
 
 [tool.pytest.ini_options]
 # -ra adds a short summary of all test outcomes aside from passed
