--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,9 @@ defaults:
   run:
     shell: bash -ieo pipefail {0}
 
+env:
+  TWINE_NON_INTERACTIVE: "true"
+
 jobs:
   release:
     name: release ${{ matrix.packages.package }} ${{ matrix.packages.os }}
