--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
       - main
-    paths:
-      - version
+#    paths:
+#      - version
 
 permissions:
   id-token: write
