--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,6 @@ on:
 
 permissions:
   id-token: write
-  contents: read
 
 defaults:
   run:
@@ -41,4 +40,6 @@ jobs:
         run: scripts/package-${{ matrix.packages.package }}
 
       - name: publish-${{ matrix.packages.package }}
-        run: scripts/publish-${{ matrix.packages.package }}
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
