Change project name to pythonsdk to prevent name clash with existing project of same name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "python-sdk"
+name = "pythonsdk"
 description = "Python Software Dev Kit"
 authors = [{name = "lijok", email = "lijok@pm.me"}]
 dynamic = ["version"]
