--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,8 +44,9 @@ dev = [
     "pytest-asyncio>=0.19.0",
 ]
 
-aws = [
-    "boto3>=1.24"
+cli = [
+    "black>=22.10.0",
+    "isort>=5.10.1",
 ]
 
 testing = [
@@ -53,6 +54,13 @@ testing = [
     "isort>=5.10.1",
     "mypy>=0.982",
 ]
+
+aws = [
+    "boto3>=1.24"
+]
+
+[project.scripts]
+python-sdk = "python_sdk.__main__:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
